# procedural-pixel-art-kata

./: .gitignore  README.md  pyproject.toml  requirements.txt  test.py
procedural_pixel_art/: __init__.py  __main__.py
